--- a/src/index.html
+++ b/src/index.html
@@ -5,14 +5,39 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="description" content="✔Професійне кавовое обладнанняв аренду
+    ✔Більше 5000 клієнтів ✔Оригінальна рецептура напоїв✔16 років присутності на ринку">
+    <meta name="keywords"
+        content="кава, кавомашина в оренду, оренда, оренда кавоварки, прокат, кавомашина в прокат, кавовий бізнес, кавоварка" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <title>Кава для бізнесу</title>
+    <title>Кава для бізнесу | Про компанію | Оренда | Кава | Bianchi Professional</title>
     <link rel="icon" href="./favicon.png" type="image/x-icon">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link
         href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@300;400;500;600;700;800&family=Roboto:wght@300;400;500;600;700;800&display=swap"
         rel="stylesheet">
+    <!-- Facebook Pixel Code -->
+    <script>
+        !function (f, b, e, v, n, t, s) {
+            if (f.fbq) return; n = f.fbq = function () {
+                n.callMethod ?
+                n.callMethod.apply(n, arguments) : n.queue.push(arguments)
+            };
+            if (!f._fbq) f._fbq = n; n.push = n; n.loaded = !0; n.version = '2.0';
+            n.queue = []; t = b.createElement(e); t.async = !0;
+            t.src = v; s = b.getElementsByTagName(e)[0];
+            s.parentNode.insertBefore(t, s)
+        }(window, document, 'script',
+            'https://connect.facebook.net/en_US/fbevents.js');
+        fbq('init', '3311079555831977');
+        fbq('track', 'PageView');
+    </script>
+    <noscript>
+        <img height="1" width="1" src="https://www.facebook.com/tr?id=3311079555831977&ev=PageView
+    &noscript=1" />
+    </noscript>
+    <!-- End Facebook Pixel Code -->
 </head>
 
 <body>
@@ -337,48 +362,55 @@
         <div class="container hr-line-contacts"></div>
     </div>
     <div class="container calc">
-        <h4 class="p-2 text-center">2. Вкажіть ціну інгредієнтів*</h4>
-        <h6 class="pb-2">*За актуальною ціною звертайтесь до менеджера <a href="./contacty.html">за телефоном або відправте заявку</a></h6>
+        <h4 class="p-2 text-center">2. Вкажіть ціну інгредієнтів <span class="select">*</span></h4>
+        <h6 class="pb-2"><span class="select">*</span>За актуальною ціною звертайтесь до менеджера <a
+                href="./contacty.html">за телефоном або відправте заявку</a></h6>
         <div class="row text-center">
             <div class="col col-md-4">
                 <div class="input-group flex-nowrap mb-3">
                     <span class="input-group-text calc__input">Зернова кава, 1 кг</span>
-                    <input id="coffee" type="number" min="10" max="999" required step="1" class="form-control price-item" value="540.00">
+                    <input id="coffee" type="number" min="10" max="999" required step="1"
+                        class="form-control price-item" value="540.00">
                     <span class="input-group-text">грн.</span>
                 </div>
             </div>
             <div class="col col-md-4">
                 <div class="input-group flex-nowrap mb-3">
                     <span class="input-group-text calc__input">Суха мол. суміш, 1 кг</span>
-                    <input id="milk" type="number" min="10" max="1000" step="1" class="form-control price-item" value="400.00">
+                    <input id="milk" type="number" min="10" max="1000" step="1" class="form-control price-item"
+                        value="400.00">
                     <span class="input-group-text">грн.</span>
                 </div>
             </div>
             <div class="col col-md-4">
                 <div class="input-group flex-nowrap mb-3">
                     <span class="input-group-text calc__input">Ірланд. Віскі, 1 кг</span>
-                    <input id="irish" type="number" min="10" max="1000" step="1" class="form-control price-item" value="420.00">
+                    <input id="irish" type="number" min="10" max="1000" step="1" class="form-control price-item"
+                        value="420.00">
                     <span class="input-group-text">грн.</span>
                 </div>
             </div>
             <div class="col col-md-4">
                 <div class="input-group flex-nowrap mb-3">
                     <span class="input-group-text calc__input">Цукор, 1 кг</span>
-                    <input id="sugar" type="number" min="10" max="1000" step="1" class="form-control price-item" value="55.00">
+                    <input id="sugar" type="number" min="10" max="1000" step="1" class="form-control price-item"
+                        value="55.00">
                     <span class="input-group-text">грн.</span>
                 </div>
             </div>
             <div class="col col-md-4">
                 <div class="input-group flex-nowrap mb-3">
                     <span class="input-group-text calc__input">Стакан 180 мл, 1 шт</span>
-                    <input id="cup180" type="number" min="0.1" max="10" step="0.01" class="form-control price-item" value="0.85">
+                    <input id="cup180" type="number" min="0.1" max="10" step="0.01" class="form-control price-item"
+                        value="0.85">
                     <span class="input-group-text">грн.</span>
                 </div>
             </div>
             <div class="col col-md-4">
                 <div class="input-group flex-nowrap mb-3">
                     <span class="input-group-text calc__input">Стакан 340 мл, 1 шт</span>
-                    <input id="cup340" type="number" min="0.1" max="10" step="0.01" class="form-control price-item" value="1.15">
+                    <input id="cup340" type="number" min="0.1" max="10" step="0.01" class="form-control price-item"
+                        value="1.15">
                     <span class="input-group-text">грн.</span>
                 </div>
             </div>
@@ -386,8 +418,9 @@
     </div>
     <div class="container hr-line-contacts"></div>
     <div class="container">
-        <h4 class="pb-2 text-center">3. Отримайте собівартість напоїв для вибраного типу кавомашини*</h4>
-        <h6 class="pb-2">*Не враховується вартість води та розмішувача</h6>
+        <h4 class="pb-2 text-center">3. Отримайте собівартість напоїв для вибраного типу кавомашини<span
+                class="select">*</span></h4>
+        <h6 class="pb-2"><span class="select">*</span>Не враховується вартість води та розмішувача.</h6>
         <div class="accordion calc_receipts collapse show p-2 pb-4" id="accordionBianchiGaia">
             <div class="row">
                 <div class="col col-auto col-md-6">
@@ -401,7 +434,7 @@
                                         Еспресо
                                     </div>
                                     <div class="col text-nowrap text-end accordion-drink espresso">
-                                       0,00 грн.
+                                        0,00 грн.
                                     </div>
                                 </div>
                             </button>
@@ -508,7 +541,7 @@
                                         Лате
                                     </div>
                                     <div class="col text-nowrap text-end accordion-drink late">
-                                       0,00 грн.
+                                        0,00 грн.
                                     </div>
                                 </div>
                             </button>
@@ -578,7 +611,7 @@
                                         Еспресо
                                     </div>
                                     <div class="col text-nowrap text-end accordion-drink espresso">
-                                       0,00 грн.
+                                        0,00 грн.
                                     </div>
                                 </div>
                             </button>
@@ -599,7 +632,7 @@
                                         Американо
                                     </div>
                                     <div class="col text-nowrap text-end accordion-drink americano">
-                                       0,00 грн.
+                                        0,00 грн.
                                     </div>
                                 </div>
                             </button>
@@ -641,7 +674,7 @@
                                         Капучино
                                     </div>
                                     <div class="col text-nowrap text-end accordion-drink cappuccino">
-                                       0,00 грн.
+                                        0,00 грн.
                                     </div>
                                 </div>
                             </button>
@@ -662,7 +695,7 @@
                                         Айріш Віскі
                                     </div>
                                     <div class="col text-nowrap text-end accordion-drink irishWhiskey">
-                                       0,00 грн.
+                                        0,00 грн.
                                     </div>
                                 </div>
                             </button>
@@ -683,7 +716,7 @@
                                         Лате
                                     </div>
                                     <div class="col text-nowrap text-end accordion-drink late">
-                                       0,00 грн.
+                                        0,00 грн.
                                     </div>
                                 </div>
                             </button>
@@ -749,7 +782,7 @@
                                         Блек Айріш Віскі
                                     </div>
                                     <div class="col text-nowrap text-end accordion-drink blackIrish">
-                                       0,00 грн.
+                                        0,00 грн.
                                     </div>
                                 </div>
                             </button>
@@ -771,7 +804,7 @@
                                         Крема Каталана
                                     </div>
                                     <div class="col text-nowrap text-end accordion-drink catalana">
-                                       0,00 грн.
+                                        0,00 грн.
                                     </div>
                                 </div>
                             </button>
@@ -793,7 +826,7 @@
                                         Крема Каталана Лате
                                     </div>
                                     <div class="col text-nowrap text-end accordion-drink catalanaLate">
-                                       0,00 грн.
+                                        0,00 грн.
                                     </div>
                                 </div>
                             </button>
@@ -907,7 +940,7 @@
                                         Еспресо
                                     </div>
                                     <div class="col text-nowrap text-end accordion-drink espresso">
-                                       0,00 грн.
+                                        0,00 грн.
                                     </div>
                                 </div>
                             </button>
@@ -928,7 +961,7 @@
                                         Американо
                                     </div>
                                     <div class="col text-nowrap text-end accordion-drink americano">
-                                       0,00 грн.
+                                        0,00 грн.
                                     </div>
                                 </div>
                             </button>
@@ -1036,7 +1069,7 @@
                                         Американо з молоком
                                     </div>
                                     <div class="col text-nowrap text-end accordion-drink americanoMilk">
-                                       0,00 грн.
+                                        0,00 грн.
                                     </div>
                                 </div>
                             </button>
@@ -1058,7 +1091,7 @@
                                         Еспресо з молоком
                                     </div>
                                     <div class="col text-nowrap text-end accordion-drink espressoMilk">
-                                       0,00 грн.
+                                        0,00 грн.
                                     </div>
                                 </div>
                             </button>
