--- a/src/dlya_cafe_restoranov.html
+++ b/src/dlya_cafe_restoranov.html
@@ -5,26 +5,47 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="description"
+        content="✔Професійна кавомашина постова для кафе та ресторанів в аренду ✔Безкоштовна доставка та обслуговування ✔Навчання вашого персоналу">
+    <meta name="keywords"
+        content="хорека, обладнання, кава,  кавове обладнання,  кавомашина в офіс, кавомашина в кафе, кавомашина в ресторан, професійне кавове обладнання" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <title>Кава для бізнесу</title>
-
+    <title>Оренда професійнї кавомашини | Біанчі Харків</title>
     <link rel="icon" href="./favicon.png" type="image/x-icon">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link
         href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@300;400;500&family=Roboto:wght@300;400;500&display=swap"
         rel="stylesheet">
+    <!-- Facebook Pixel Code -->
+    <script>
+        !function (f, b, e, v, n, t, s) {
+            if (f.fbq) return; n = f.fbq = function () {
+                n.callMethod ?
+                n.callMethod.apply(n, arguments) : n.queue.push(arguments)
+            };
+            if (!f._fbq) f._fbq = n; n.push = n; n.loaded = !0; n.version = '2.0';
+            n.queue = []; t = b.createElement(e); t.async = !0;
+            t.src = v; s = b.getElementsByTagName(e)[0];
+            s.parentNode.insertBefore(t, s)
+        }(window, document, 'script',
+            'https://connect.facebook.net/en_US/fbevents.js');
+        fbq('init', '3311079555831977');
+        fbq('track', 'PageView');
+    </script>
+    <noscript>
+        <img height="1" width="1" src="https://www.facebook.com/tr?id=3311079555831977&ev=PageView
+    &noscript=1" />
+    </noscript>
+    <!-- End Facebook Pixel Code -->
 </head>
 
 <body>
-
     <!-- /////////////////////////////////////////   Header    //////////////////////////////////////// -->
-
     <header class="header">
         <div class="header__up">
             <div class="header__wrapper container text-center">
                 <div class="row">
-
                     <div class="header__item col">
                         <ul>
                             <li class="telephone text-nowrap">
@@ -33,10 +54,8 @@
                             <li class="telephone text-nowrap">
                                 <a class="telephone" href="tel:+380935475572">(093) 547-55-72</a>
                             </li>
-
                         </ul>
                     </div>
-
                     <div class="header__item col">
                         <ul>
                             <li class="telephone text-nowrap">КИЇВ</li>
@@ -45,17 +64,14 @@
                             </li>
                         </ul>
                     </div>
-
                     <div class="header__item col">
                         <ul>
                             <li class="telephone text-nowrap">БРОВАРИ, БОРИСПІЛЬ</li>
-
                             <li class="telephone text-nowrap">
                                 <a class="telephone" href="tel:+380989700921">(098) 970-09-21</a>
                             </li>
                         </ul>
                     </div>
-
                     <div class="header__item col">
                         <ul>
                             <li class="telephone text-nowrap">БІЛА ЦЕРКВА</li>
@@ -64,7 +80,6 @@
                             </li>
                         </ul>
                     </div>
-
                     <div class="header__item col">
                         <ul>
                             <li class="telephone">ЧЕРКАСИ</li>
@@ -73,7 +88,6 @@
                             </li>
                         </ul>
                     </div>
-
                     <div class="header__item col">
                         <ul>
                             <li class="telephone">ВЕНДІНГ</li>
@@ -82,19 +96,15 @@
                             </li>
                         </ul>
                     </div>
-
                     <div class="header__item col">
                         <button class="btn text-nowrap" data-bs-toggle="modal" data-bs-target="#Modal">Залишити
                             заявку</button>
                     </div>
-
                 </div>
             </div>
         </div>
     </header>
-
     <!-- /////////////////////////////////////////   sidepanel    ////////////////////////////////////////     -->
-
     <div class="sidepanel__wrapper d-none d-lg-block">
         <div class="sidepanel">
             <div class="sidepanel__text text-nowrap"><span>Соціальні мережі</span></div>
@@ -111,9 +121,7 @@
             </a>
         </div>
     </div>
-
     <!-- /////////////////////////////////////////   navbar    ////////////////////////////////////////     -->
-
     <nav class="navbar navbar-expand-lg bg-light" id="navbar">
         <div class="container">
             <div>
@@ -131,7 +139,6 @@
                     <li class="nav-item">
                         <a class="btn text-nowrap" role="button" href="./index.html">ПРО НАС</a>
                     </li>
-
                     <li class="nav-item">
                         <ul class="btn-group">
                             <li class="nav-item">
@@ -152,7 +159,6 @@
                             </li>
                         </ul>
                     </li>
-
                     <li class="nav-item">
                         <ul class="btn-group">
                             <li class="nav-item">
@@ -173,7 +179,6 @@
                             </li>
                         </ul>
                     </li>
-
                     <li class="nav-item">
                         <ul class="btn-group">
                             <li class="nav-item">
@@ -192,7 +197,6 @@
                             </li>
                         </ul>
                     </li>
-
                     <li class="nav-item">
                         <a class="btn text-nowrap" role="button" href="./contacty.html">КОНТАКТИ</a>
                     </li>
@@ -200,21 +204,16 @@
             </div>
         </div>
     </nav>
-
     <div class="separator">
         <h3>Для кафе, ресторанів, офісів</h3>
     </div>
-
     <!-- /////////////////////////////////////////   Banner    ////////////////////////////////////////     -->
-
     <div class="banner">
         <div class="container">
             <a><img src="./img/dlya_cafe_restoranov/classic_banner.webp" class="img-fluid" alt="banner"></a>
         </div>
     </div>
-
     <!-- /////////////////////////////////////////   Icons    ////////////////////////////////////////     -->
-
     <section class="icons">
         <div class="container cards">
             <div class="row">
@@ -224,12 +223,12 @@
                         <div class="card-body">
                             <h5 class="fw-bold">Обладнання в аренду</h5>
                             <p class="card-text main-text-size">Ми надаємо в оренду широкий вибір кавового обладнання.
-                                Як <a href="./avtomaty.html">Суперавтомати</a> з сенсорним екраном, так і <a href="./postovie.html">Класичні</a> постові кавомашини у парі з
+                                Як <a href="./avtomaty.html">Суперавтомати</a> з сенсорним екраном, так і <a
+                                    href="./postovie.html">Класичні</a> постові кавомашини у парі з
                                 професійною <a href="./kofemolki.html">Кавомолкою</a>.</p>
                         </div>
                     </div>
                 </div>
-
                 <div class="col-md-4">
                     <div class="card text-center">
                         <img src="./img/dlya_magazinov_i_setey/icon.webp" class="card-img-top" alt="icon">
@@ -241,7 +240,6 @@
                         </div>
                     </div>
                 </div>
-
                 <div class="col-md-4">
                     <div class="card text-center">
                         <img src="./img/dlya_magazinov_i_setey/icon.webp" class="card-img-top" alt="icon">
@@ -256,17 +254,13 @@
             </div>
         </div>
     </section>
-
     <div class="container hr-line"></div>
-
     <!-- /////////////////////////////////////////   Magazin    ////////////////////////////////////////     -->
-
     <div class="container">
         <div class="row">
             <div class="col-lg-6">
                 <img src="./img/dlya_cafe_restoranov/cava.webp" class="p-3 img-fluid" alt="magazin">
             </div>
-
             <div class="col-lg-6">
                 <p class="p-4 magazine indent main-text-size">Мало хто хоче брати кота в мішку. Особливо, коли це
                     стосується не однієї чашки
@@ -277,7 +271,6 @@
             </div>
         </div>
     </div>
-
     <div class="container magazine">
         <div class="row">
             <div class="col-lg-6">
@@ -302,11 +295,9 @@
             </div>
         </div>
     </div>
-
     <div class="separator">
         <h3>Що потрібно для співпраці</h3>
     </div>
-
     <div class="container timeline">
         <div class="row">
             <div class="col">
@@ -321,7 +312,6 @@
                                     Залиште заявку на нашому сайті по телефону чи
                                     електронній пошті.
                                 </small>
-
                             </p>
                         </div>
                     </div>
@@ -350,7 +340,6 @@
                                     Ми в короткий термін встановимо кавомашину у Вашому
                                     закладі.
                                 </small>
-
                             </p>
                         </div>
                     </div>
@@ -371,11 +360,8 @@
             </div>
         </div>
     </div>
-
     <div class="container hr-line"></div>
-
     <!-- /////////////////////////////////////////   CoffeMashineGallery    //////////////////////////////////////// -->
-
     <div class="gallery" id="gallery">
         <div class="container text-center">
             <div class="row">
@@ -384,45 +370,35 @@
                         <img src="./img/dlya_cafe_restoranov/full1.webp" class="img-thumbnail scale" alt="slide">
                     </div>
                 </div>
-
                 <div class="col-sm-4 col-lg-2">
                     <div class="img-fluid">
                         <img src="./img/dlya_cafe_restoranov/full2.webp" class="img-thumbnail scale" alt="slide">
                     </div>
                 </div>
-
                 <div class="col-sm-4 col-lg-2">
                     <div class="img-fluid">
                         <img src="./img/dlya_cafe_restoranov/full3.webp" class="img-thumbnail scale" alt="slide">
                     </div>
                 </div>
-
                 <div class="col-sm-4 col-lg-2">
                     <div class="img-fluid">
                         <img src="./img/dlya_cafe_restoranov/full4.webp" class="img-thumbnail scale" alt="slide">
                     </div>
                 </div>
-
                 <div class="col-sm-4 col-lg-2">
                     <div class="img-fluid">
                         <img src="./img/dlya_cafe_restoranov/full5.webp" class="img-thumbnail scale" alt="slide">
                     </div>
                 </div>
-
                 <div class="col-sm-4 col-lg-2">
                     <div class="img-fluid">
                         <img src="./img/dlya_cafe_restoranov/full6.webp" class="img-thumbnail scale" alt="slide">
                     </div>
                 </div>
-
-
             </div>
         </div>
-
     </div>
-
     <!-- /////////////////////////////////////////   Footer    ////////////////////////////////////////     -->
-
     <footer class="footer">
         <div class="footer-items">
             <div class="container">
@@ -443,7 +419,6 @@
                                 <a class="telephone text-nowrap" href="tel:+380660227720">т. +38 (066) 022-77-20</a>
                             </div>
                         </div>
-
                         <div class="row">
                             <div class="col footer-left">
                                 <h6>Біла Церква</h6>
@@ -454,14 +429,12 @@
                                 <a class="telephone text-nowrap" href="tel:+380989700921">т. +38 (098) 970-09-21</a>
                             </div>
                         </div>
-
                         <div class="row">
                             <div class="col footer-left">
                                 <h6>Черкаси</h6>
                                 <a class="telephone text-nowrap" href="tel:+380989700929">т. +38 (098) 970-09-29</a>
                             </div>
                         </div>
-
                         <div class="row">
                             <div class="col footer-left">
                                 <h6>e-mail</h6>
@@ -470,22 +443,16 @@
                             </div>
                         </div>
                     </div>
-
-
                     <div class="col-4 p-4 offset-md-2">
-
                         <div class="footer-left">
                             <h6>ВЕНДІНГ</h6>
                             <p>
                                 Встановлення вендінгового обладнання по містах:
                                 Харків, Київ, Полтава, Дніпро, Запоріжжя, Рівне, Львів,
-                                Івано-Франківськ, Чернівці, Вінниця, Житомир, Одеса, 
+                                Івано-Франківськ, Чернівці, Вінниця, Житомир, Одеса,
                                 Кривий Ріг, Чернігів, Калуш, Коломия, Стрий.
-
                             </p>
                         </div>
-
-
                         <h6>Менеджер з розвитку</h6>
                         <p>
                             <a class="telephone text-nowrap" href="tel:+380950252822">т. +38 (095) 025-28-22</a>
@@ -494,7 +461,6 @@
                             <a class="telephone text-nowrap"
                                 href="mailto:vend.coffee@bianchiprof.com">vend.coffee@bianchiprof.com</a>
                         </p>
-
                     </div>
                 </div>
             </div>
@@ -503,9 +469,7 @@
             <h6><small>© 2016-2022 Bianchi professional</small></h6>
         </div>
     </footer>
-
     <!-- /////////////////////////////////////modal///////////////////////////// -->
-
     <div class="modal fade" id="Modal" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
         <div class="modal-dialog">
             <div class="modal-content">
@@ -547,18 +511,14 @@
                             </select> -->
                         </div>
                     </div>
-
                     <div class="modal-footer">
-
                         <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Закрити</button>
                         <button name="sendRequestModal" class="btn send-request-modal">Відправити</button>
                     </div>
                 </form>
-
             </div>
         </div>
     </div>
-
     <script src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.1/dist/js/bootstrap.bundle.min.js"></script>
 </body>
