--- a/src/moloko_shokolad.html
+++ b/src/moloko_shokolad.html
@@ -5,27 +5,47 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="description" content="✔Готові розчинні суміші можуть значно урізноманітнити меню кавомашини як в чистому вигляді, так і в міксі з кавою
+    ✔Всі продукти вищої якості виробництва Голландії та Італії
+    ✔Яскравий насичений смак, улюблений і впізнаваний багатьма клієнтами">
+    <meta name="keywords" content="bianchi, кава, капучино, молоко, ірландський віскі" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <title>Кава для бізнесу</title>
-
+    <title>Шоколад | Капучино | Молоко | Ірландський Віскі</title>
     <link rel="icon" href="./favicon.png" type="image/x-icon">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link
         href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@300;400;500&family=Roboto:wght@300;400;500&display=swap"
         rel="stylesheet">
-
+    <!-- Facebook Pixel Code -->
+    <script>
+        !function (f, b, e, v, n, t, s) {
+            if (f.fbq) return; n = f.fbq = function () {
+                n.callMethod ?
+                n.callMethod.apply(n, arguments) : n.queue.push(arguments)
+            };
+            if (!f._fbq) f._fbq = n; n.push = n; n.loaded = !0; n.version = '2.0';
+            n.queue = []; t = b.createElement(e); t.async = !0;
+            t.src = v; s = b.getElementsByTagName(e)[0];
+            s.parentNode.insertBefore(t, s)
+        }(window, document, 'script',
+            'https://connect.facebook.net/en_US/fbevents.js');
+        fbq('init', '3311079555831977');
+        fbq('track', 'PageView');
+    </script>
+    <noscript>
+        <img height="1" width="1" src="https://www.facebook.com/tr?id=3311079555831977&ev=PageView
+    &noscript=1" />
+    </noscript>
+    <!-- End Facebook Pixel Code -->
 </head>
 
 <body>
-
     <!-- /////////////////////////////////////////   Header    //////////////////////////////////////// -->
-
     <header class="header">
         <div class="header__up">
             <div class="header__wrapper container text-center">
                 <div class="row">
-
                     <div class="header__item col">
                         <ul>
                             <li class="telephone text-nowrap">
@@ -34,10 +54,8 @@
                             <li class="telephone text-nowrap">
                                 <a class="telephone" href="tel:+380935475572">(093) 547-55-72</a>
                             </li>
-
                         </ul>
                     </div>
-
                     <div class="header__item col">
                         <ul>
                             <li class="telephone text-nowrap">КИЇВ</li>
@@ -46,17 +64,14 @@
                             </li>
                         </ul>
                     </div>
-
                     <div class="header__item col">
                         <ul>
                             <li class="telephone text-nowrap">БРОВАРИ, БОРИСПІЛЬ</li>
-
                             <li class="telephone text-nowrap">
                                 <a class="telephone" href="tel:+380989700921">(098) 970-09-21</a>
                             </li>
                         </ul>
                     </div>
-
                     <div class="header__item col">
                         <ul>
                             <li class="telephone text-nowrap">БІЛА ЦЕРКВА</li>
@@ -65,7 +80,6 @@
                             </li>
                         </ul>
                     </div>
-
                     <div class="header__item col">
                         <ul>
                             <li class="telephone">ЧЕРКАСИ</li>
@@ -74,7 +88,6 @@
                             </li>
                         </ul>
                     </div>
-
                     <div class="header__item col">
                         <ul>
                             <li class="telephone">ВЕНДІНГ</li>
@@ -83,24 +96,21 @@
                             </li>
                         </ul>
                     </div>
-
                     <div class="header__item col">
                         <button class="btn text-nowrap" data-bs-toggle="modal" data-bs-target="#Modal">Залишити
                             заявку</button>
                     </div>
-
                 </div>
             </div>
         </div>
     </header>
-
     <!-- /////////////////////////////////////////   sidepanel    ////////////////////////////////////////     -->
-
     <div class="sidepanel__wrapper d-none d-lg-block">
         <div class="sidepanel">
             <div class="sidepanel__text text-nowrap"><span>Соціальні мережі</span></div>
             <div class="sidepanel__divider"></div>
-            <a target="_blank" href="https://instagram.com/bianchiprofessional?utm_medium=copy_link" class="sidepanel__icon">
+            <a target="_blank" href="https://instagram.com/bianchiprofessional?utm_medium=copy_link"
+                class="sidepanel__icon">
                 <img src="./img/index/instagram_green.webp" alt="instagram">
             </a>
             <a target="_blank" href="https://facebook.com/bianchiprofessional" class="sidepanel__icon">
@@ -111,14 +121,14 @@
             </a>
         </div>
     </div>
-
-     <!-- /////////////////////////////////////////   navbar    ////////////////////////////////////////     -->
-
+    <!-- /////////////////////////////////////////   navbar    ////////////////////////////////////////     -->
     <nav class="navbar navbar-expand-lg bg-light" id="navbar">
         <div class="container">
             <div>
-                <img src="./img/logo_menu1.webp" id="logo1" alt="logo" width="52" height="48" class="d-inline-block align-text-top">
-                <img src="./img/logo_menu2.webp" alt="logo" width="142" height="48" class="d-inline-block align-text-top">
+                <img src="./img/logo_menu1.webp" id="logo1" alt="logo" width="52" height="48"
+                    class="d-inline-block align-text-top">
+                <img src="./img/logo_menu2.webp" alt="logo" width="142" height="48"
+                    class="d-inline-block align-text-top">
             </div>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
                 aria-controls="navbarNav" aria-expanded="false" aria-label="Переключатель навигации">
@@ -129,7 +139,6 @@
                     <li class="nav-item">
                         <a class="btn text-nowrap" role="button" href="./index.html">ПРО НАС</a>
                     </li>
-
                     <li class="nav-item">
                         <ul class="btn-group">
                             <li class="nav-item">
@@ -150,7 +159,6 @@
                             </li>
                         </ul>
                     </li>
-
                     <li class="nav-item">
                         <ul class="btn-group">
                             <li class="nav-item">
@@ -171,7 +179,6 @@
                             </li>
                         </ul>
                     </li>
-
                     <li class="nav-item">
                         <ul class="btn-group">
                             <li class="nav-item">
@@ -190,7 +197,6 @@
                             </li>
                         </ul>
                     </li>
-
                     <li class="nav-item">
                         <a class="btn text-nowrap" role="button" href="./contacty.html">КОНТАКТИ</a>
                     </li>
@@ -198,13 +204,10 @@
             </div>
         </div>
     </nav>
-
     <div class="separator">
         <h3>Капучино, молоко, шоколад</h3>
     </div>
-
     <!-- /////////////////////////////////////////   Banner    ////////////////////////////////////////     -->
-
     <div class="description container">
         <div class="row">
             <div class="col"></div>
@@ -216,23 +219,17 @@
                         <li>
                             Всі продукти вищої якості виробництва Голландії та Італії.
                         </li>
-
                         <li>
                             Яскравий насичений смак, улюблений і впізнаваний багатьма клієнтами.
                         </li>
                     </small>
-
                 </ul>
             </div>
             <div class="col"></div>
         </div>
-
     </div>
-
     <!-- /////////////////////////////////////////   Goods    ////////////////////////////////////////     -->
-
     <div class="container hr-line"></div>
-
     <div class="container cards">
         <div class="row">
             <div class="col mb-1">
@@ -247,7 +244,6 @@
                             </ul>
                         </figcaption>
                     </figure>
-
                     <div class="card-body">
                         <h3 class="text-center">Суха молочна суміш "Bianchi Professional"</h3>
                         <small>
@@ -255,11 +251,9 @@
                                 напоїв. Молочна суміш вражає своєю кремовою піною і м'яким смаком. Підходить для всіх
                                 типів кавомашин, які працюють з використанням сухого молока.</p>
                         </small>
-
                     </div>
                 </div>
             </div>
-
             <div class="col mb-1">
                 <div class="card hover-text-one">
                     <figure class="effect-text-three">
@@ -272,7 +266,6 @@
                             </ul>
                         </figcaption>
                     </figure>
-
                     <div class="card-body">
                         <h3 class="text-center">Какао розчинне "Bianchi Professional"</h3>
                         <small>
@@ -280,11 +273,9 @@
                                 піднімає настрій і відмінно тонізує! Добре смакує як в чистому вигляді, так в сумішах з
                                 іншими напоями.</p>
                         </small>
-
                     </div>
                 </div>
             </div>
-
             <div class="col mb-1">
                 <div class="card hover-text-one">
                     <figure class="effect-text-three">
@@ -297,20 +288,16 @@
                             </ul>
                         </figcaption>
                     </figure>
-
                     <div class="card-body">
                         <h3 class="text-center">Капучино Bianchi Ірландський Віскі</h3>
                         <small>
                             <p class="lh-sm">Напій, що м'яко розкривається на молочній основі. Грайливого настрою додає
                                 лісовий горіх, що верхніми нотами нагадує той самий напій, в честь якого і назва. А
                                 солодка цукерка завершує композицію шоколадним смаком.</p>
-
                         </small>
-
                     </div>
                 </div>
             </div>
-
             <div class="col mb-1">
                 <div class="card hover-text-one">
                     <figure class="effect-text-three">
@@ -324,7 +311,6 @@
                             </ul>
                         </figcaption>
                     </figure>
-
                     <div class="card-body">
                         <h3 class="text-center">Капучино Bianchi Крема Каталана</h3>
                         <small>
@@ -336,7 +322,6 @@
             </div>
         </div>
     </div>
-
     <div class="container cards">
         <div class="row justify-content-center">
             <div class="col col-auto col-sm-6 col-md-5 mb-1">
@@ -352,21 +337,20 @@
                             </ul>
                         </figcaption>
                     </figure>
-
                     <div class="card-body">
                         <h3 class="text-center">Шоколад Tasarone "Black Edition"</h3>
                         <small>
-                            <p class="lh-sm">Темний гарячий шоколад <b>Tasarone "Black Edition"</b> — чудовий напій, створений для справжніх гурманів.</p>
+                            <p class="lh-sm">Темний гарячий шоколад <b>Tasarone "Black Edition"</b> — чудовий напій,
+                                створений для справжніх гурманів.</p>
                             <p class="lh-sm">Підвищений вміст какао-порошку(32%).</p>
                             <p class="lh-sm">Більш консервативний смак і аромат, ніж у Tasarone Primo Gusto.</p>
                             <p class="lh-sm">Тут використаний інший сорт какао і менше цукру.</p>
-                            <p class="lh-sm">Не містить консервантів, барвників, додаткових ароматизаторів, стабілізаторів, підсилювачів смаку та інших харчових добавок.</p>
+                            <p class="lh-sm">Не містить консервантів, барвників, додаткових ароматизаторів,
+                                стабілізаторів, підсилювачів смаку та інших харчових добавок.</p>
                         </small>
-
                     </div>
                 </div>
             </div>
-
             <div class="col col-auto col-sm-6 col-md-5 mb-1">
                 <div class="card hover-text-one">
                     <figure class="effect-text-three">
@@ -380,24 +364,35 @@
                             </ul>
                         </figcaption>
                     </figure>
-
                     <div class="card-body">
                         <h3 class="text-center">Шоколад Tasarone "Primo Gusto"</h3>
                         <small>
-                            <p class="lh-sm"> <b>Tasarone "Primo Gusto"</b> — гарячий шоколад з дуже м'яким і ніжним смаком.</p>
+                            <p class="lh-sm"> <b>Tasarone "Primo Gusto"</b> — гарячий шоколад з дуже м'яким і ніжним
+                                смаком.</p>
                             <p class="lh-sm">Вміст какао-порошку меньший, ніж в Primo Gusto (16-17%).</p>
                             <p class="lh-sm">Розкриває вершковий смак в парі з молоком.</p>
-                            <p class="lh-sm">Не містить консервантів, барвників, додаткових ароматизаторів, стабілізаторів, підсилювачів смаку та інших харчових добавок.</p>
+                            <p class="lh-sm">Не містить консервантів, барвників, додаткових ароматизаторів,
+                                стабілізаторів, підсилювачів смаку та інших харчових добавок.</p>
                         </small>
-
                     </div>
                 </div>
             </div>
         </div>
     </div>
-
+    <!-- /////////////////////////////////////Toast///////////////////////////// -->
+    <div class="toast-container position-fixed bottom-0 end-0 p-3">
+        <div id="liveToast" class="toast" role="alert" aria-live="assertive" aria-atomic="true" data-bs-delay="60000">
+            <div class="toast-header">
+                <img src="./img/logo_popup.webp" class="rounded me-2" alt="logo">
+                <strong class="me-auto">Бажаєте розрахувати собівартість напоїв?</strong>
+                <button type="button" class="btn-close" data-bs-dismiss="toast" aria-label="Закрыть"></button>
+            </div>
+            <div class="toast-body text-center fw-bold">
+                Скористайтесь нашим <a href="./index.html#calc">калькулятором</a>.
+            </div>
+        </div>
+    </div>
     <!-- /////////////////////////////////////////   Footer    ////////////////////////////////////////     -->
-
     <footer class="footer">
         <div class="footer-items">
             <div class="container">
@@ -418,7 +413,6 @@
                                 <a class="telephone text-nowrap" href="tel:+380660227720">т. +38 (066) 022-77-20</a>
                             </div>
                         </div>
-
                         <div class="row">
                             <div class="col footer-left">
                                 <h6>Біла Церква</h6>
@@ -429,14 +423,12 @@
                                 <a class="telephone text-nowrap" href="tel:+380989700921">т. +38 (098) 970-09-21</a>
                             </div>
                         </div>
-
                         <div class="row">
                             <div class="col footer-left">
                                 <h6>Черкаси</h6>
                                 <a class="telephone text-nowrap" href="tel:+380989700929">т. +38 (098) 970-09-29</a>
                             </div>
                         </div>
-
                         <div class="row">
                             <div class="col footer-left">
                                 <h6>e-mail</h6>
@@ -445,22 +437,16 @@
                             </div>
                         </div>
                     </div>
-
-
                     <div class="col-4 p-4 offset-md-2">
-
                         <div class="footer-left">
                             <h6>ВЕНДІНГ</h6>
                             <p>
                                 Встановлення вендінгового обладнання по містах:
                                 Харків, Київ, Полтава, Дніпро, Запоріжжя, Рівне, Львів,
-                                Івано-Франківськ, Чернівці, Вінниця, Житомир, Одеса, 
+                                Івано-Франківськ, Чернівці, Вінниця, Житомир, Одеса,
                                 Кривий Ріг, Чернігів, Калуш, Коломия, Стрий.
-
                             </p>
                         </div>
-
-
                         <h6>Менеджер з розвитку</h6>
                         <p>
                             <a class="telephone text-nowrap" href="tel:+380950252822">т. +38 (095) 025-28-22</a>
@@ -469,7 +455,6 @@
                             <a class="telephone text-nowrap"
                                 href="mailto:vend.coffee@bianchiprof.com">vend.coffee@bianchiprof.com</a>
                         </p>
-
                     </div>
                 </div>
             </div>
@@ -478,9 +463,7 @@
             <h6><small>© 2016-2022 Bianchi professional</small></h6>
         </div>
     </footer>
-
     <!-- /////////////////////////////////////modal///////////////////////////// -->
-
     <div class="modal fade" id="Modal" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
         <div class="modal-dialog">
             <div class="modal-content">
@@ -512,18 +495,14 @@
                                 placeholder="Ваше місто..." required>
                         </div>
                     </div>
-
                     <div class="modal-footer">
-
                         <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Закрити</button>
                         <button name="sendRequestModal" class="btn send-request-modal">Відправити</button>
                     </div>
                 </form>
-
             </div>
         </div>
     </div>
-
     <script src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.1/dist/js/bootstrap.bundle.min.js"></script>
 </body>
