--- a/src/postovie.html
+++ b/src/postovie.html
@@ -5,26 +5,47 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="description"
+        content="✔Оренда професійних постових кавомашин для кафе та ресторанів Bianchi Professional ✔В комплекті можна взяти професійну кавомолку">
+    <meta name="keywords"
+        content="хорека, обладнання, кава,  кавове обладнання,  кавомашина в офіс, кавомашина в кафе, кавомашина в ресторан, професійне кавове обладнання" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <title>Кава для бізнесу</title>
-
+    <title>Професійна кавомашина для кафе, ресторанів в Київі, Харкові | Bianchi</title>
     <link rel="icon" href="./favicon.png" type="image/x-icon">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link
         href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@300;400;500&family=Roboto:wght@300;400;500&display=swap"
         rel="stylesheet">
+    <!-- Facebook Pixel Code -->
+    <script>
+        !function (f, b, e, v, n, t, s) {
+            if (f.fbq) return; n = f.fbq = function () {
+                n.callMethod ?
+                n.callMethod.apply(n, arguments) : n.queue.push(arguments)
+            };
+            if (!f._fbq) f._fbq = n; n.push = n; n.loaded = !0; n.version = '2.0';
+            n.queue = []; t = b.createElement(e); t.async = !0;
+            t.src = v; s = b.getElementsByTagName(e)[0];
+            s.parentNode.insertBefore(t, s)
+        }(window, document, 'script',
+            'https://connect.facebook.net/en_US/fbevents.js');
+        fbq('init', '3311079555831977');
+        fbq('track', 'PageView');
+    </script>
+    <noscript>
+        <img height="1" width="1" src="https://www.facebook.com/tr?id=3311079555831977&ev=PageView
+    &noscript=1" />
+    </noscript>
+    <!-- End Facebook Pixel Code -->
 </head>
 
 <body>
-
     <!-- /////////////////////////////////////////   Header    //////////////////////////////////////// -->
-
     <header class="header">
         <div class="header__up">
             <div class="header__wrapper container text-center">
                 <div class="row">
-
                     <div class="header__item col">
                         <ul>
                             <li class="telephone text-nowrap">
@@ -33,10 +54,8 @@
                             <li class="telephone text-nowrap">
                                 <a class="telephone" href="tel:+380935475572">(093) 547-55-72</a>
                             </li>
-
                         </ul>
                     </div>
-
                     <div class="header__item col">
                         <ul>
                             <li class="telephone text-nowrap">КИЇВ</li>
@@ -45,17 +64,14 @@
                             </li>
                         </ul>
                     </div>
-
                     <div class="header__item col">
                         <ul>
                             <li class="telephone text-nowrap">БРОВАРИ, БОРИСПІЛЬ</li>
-
                             <li class="telephone text-nowrap">
                                 <a class="telephone" href="tel:+380989700921">(098) 970-09-21</a>
                             </li>
                         </ul>
                     </div>
-
                     <div class="header__item col">
                         <ul>
                             <li class="telephone text-nowrap">БІЛА ЦЕРКВА</li>
@@ -64,7 +80,6 @@
                             </li>
                         </ul>
                     </div>
-
                     <div class="header__item col">
                         <ul>
                             <li class="telephone">ЧЕРКАСИ</li>
@@ -73,7 +88,6 @@
                             </li>
                         </ul>
                     </div>
-
                     <div class="header__item col">
                         <ul>
                             <li class="telephone">ВЕНДІНГ</li>
@@ -82,24 +96,21 @@
                             </li>
                         </ul>
                     </div>
-
                     <div class="header__item col">
                         <button class="btn text-nowrap" data-bs-toggle="modal" data-bs-target="#Modal">Залишити
                             заявку</button>
                     </div>
-
                 </div>
             </div>
         </div>
     </header>
-
     <!-- /////////////////////////////////////////   sidepanel    ////////////////////////////////////////     -->
-
     <div class="sidepanel__wrapper d-none d-lg-block">
         <div class="sidepanel">
             <div class="sidepanel__text text-nowrap"><span>Соціальні мережі</span></div>
             <div class="sidepanel__divider"></div>
-            <a target="_blank" href="https://instagram.com/bianchiprofessional?utm_medium=copy_link" class="sidepanel__icon">
+            <a target="_blank" href="https://instagram.com/bianchiprofessional?utm_medium=copy_link"
+                class="sidepanel__icon">
                 <img src="./img/index/instagram_green.webp" alt="instagram">
             </a>
             <a target="_blank" href="https://facebook.com/bianchiprofessional" class="sidepanel__icon">
@@ -110,14 +121,14 @@
             </a>
         </div>
     </div>
-
-     <!-- /////////////////////////////////////////   navbar    ////////////////////////////////////////     -->
-
+    <!-- /////////////////////////////////////////   navbar    ////////////////////////////////////////     -->
     <nav class="navbar navbar-expand-lg bg-light" id="navbar">
         <div class="container">
             <div>
-                <img src="./img/logo_menu1.webp" id="logo1" alt="logo" width="52" height="48" class="d-inline-block align-text-top">
-                <img src="./img/logo_menu2.webp" alt="logo" width="142" height="48" class="d-inline-block align-text-top">
+                <img src="./img/logo_menu1.webp" id="logo1" alt="logo" width="52" height="48"
+                    class="d-inline-block align-text-top">
+                <img src="./img/logo_menu2.webp" alt="logo" width="142" height="48"
+                    class="d-inline-block align-text-top">
             </div>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
                 aria-controls="navbarNav" aria-expanded="false" aria-label="Переключатель навигации">
@@ -128,7 +139,6 @@
                     <li class="nav-item">
                         <a class="btn text-nowrap" role="button" href="./index.html">ПРО НАС</a>
                     </li>
-
                     <li class="nav-item">
                         <ul class="btn-group">
                             <li class="nav-item">
@@ -149,7 +159,6 @@
                             </li>
                         </ul>
                     </li>
-
                     <li class="nav-item">
                         <ul class="btn-group">
                             <li class="nav-item">
@@ -170,7 +179,6 @@
                             </li>
                         </ul>
                     </li>
-
                     <li class="nav-item">
                         <ul class="btn-group">
                             <li class="nav-item">
@@ -189,7 +197,6 @@
                             </li>
                         </ul>
                     </li>
-
                     <li class="nav-item">
                         <a class="btn text-nowrap" role="button" href="./contacty.html">КОНТАКТИ</a>
                     </li>
@@ -197,13 +204,10 @@
             </div>
         </div>
     </nav>
-
     <div class="separator">
         <h3>Класичні постові кавомашини</h3>
     </div>
-
     <!-- /////////////////////////////////////////   Banner    ////////////////////////////////////////     -->
-
     <div class="description container">
         <div class="row">
             <div class="col"></div>
@@ -216,38 +220,28 @@
                         <li>
                             Не мають вбудованих кавомолок, тому всі кавові суміші готуються вручну.
                         </li>
-
                         <li>
                             Велика різноманітність і висока якість приготованих напоїв.
                         </li>
-
                         <li>
                             Широта маневрів і можливість творчого підходу до приготування напоїв.
                         </li>
-
                         <li>
                             Надійність і довговічність.
                         </li>
                     </small>
-
                 </ul>
             </div>
             <div class="col"></div>
         </div>
-
     </div>
-
     <!-- /////////////////////////////////////////   Mashines    ////////////////////////////////////////     -->
     <div class="container hr-line"></div>
-
     <div class="container cards" style="padding-left: 10%;">
-
         <div class="row">
-           
             <div class="col-md-5">
                 <img src="./img/postovie/classic.webp" class="img-fluid" alt="Bianchi Sofia A2">
             </div>
-
             <div class="col-md-6">
                 <div class="card-body">
                     <h3 class="mb-5" style="margin-left: 20%;">Bianchi Sofia A2</h3>
@@ -270,13 +264,10 @@
             </div>
         </div>
     </div>
-
     <div class="timeline text-center">
         <button class="btn text-nowrap fw-bold" data-bs-toggle="modal" data-bs-target="#Modal">Залишити заявку</button>
     </div>
-
     <!-- /////////////////////////////////////////   Footer    ////////////////////////////////////////     -->
-
     <footer class="footer">
         <div class="footer-items">
             <div class="container">
@@ -297,7 +288,6 @@
                                 <a class="telephone text-nowrap" href="tel:+380660227720">т. +38 (066) 022-77-20</a>
                             </div>
                         </div>
-
                         <div class="row">
                             <div class="col footer-left">
                                 <h6>Біла Церква</h6>
@@ -308,14 +298,12 @@
                                 <a class="telephone text-nowrap" href="tel:+380989700921">т. +38 (098) 970-09-21</a>
                             </div>
                         </div>
-
                         <div class="row">
                             <div class="col footer-left">
                                 <h6>Черкаси</h6>
                                 <a class="telephone text-nowrap" href="tel:+380989700929">т. +38 (098) 970-09-29</a>
                             </div>
                         </div>
-
                         <div class="row">
                             <div class="col footer-left">
                                 <h6>e-mail</h6>
@@ -324,22 +312,16 @@
                             </div>
                         </div>
                     </div>
-
-
                     <div class="col-4 p-4 offset-md-2">
-
                         <div class="footer-left">
                             <h6>ВЕНДІНГ</h6>
                             <p>
                                 Встановлення вендінгового обладнання по містах:
                                 Харків, Київ, Полтава, Дніпро, Запоріжжя, Рівне, Львів,
-                                Івано-Франківськ, Чернівці, Вінниця, Житомир, Одеса, 
+                                Івано-Франківськ, Чернівці, Вінниця, Житомир, Одеса,
                                 Кривий Ріг, Чернігів, Калуш, Коломия, Стрий.
-
                             </p>
                         </div>
-
-
                         <h6>Менеджер з розвитку</h6>
                         <p>
                             <a class="telephone text-nowrap" href="tel:+380950252822">т. +38 (095) 025-28-22</a>
@@ -348,7 +330,6 @@
                             <a class="telephone text-nowrap"
                                 href="mailto:vend.coffee@bianchiprof.com">vend.coffee@bianchiprof.com</a>
                         </p>
-
                     </div>
                 </div>
             </div>
@@ -357,9 +338,7 @@
             <h6><small>© 2016-2022 Bianchi professional</small></h6>
         </div>
     </footer>
-
     <!-- /////////////////////////////////////modal///////////////////////////// -->
-
     <div class="modal fade" id="Modal" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
         <div class="modal-dialog">
             <div class="modal-content">
@@ -401,18 +380,14 @@
                             </select> -->
                         </div>
                     </div>
-
                     <div class="modal-footer">
-
                         <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Закрити</button>
                         <button name="sendRequestModal" class="btn send-request-modal">Відправити</button>
                     </div>
                 </form>
-
             </div>
         </div>
     </div>
-
     <script src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.1/dist/js/bootstrap.bundle.min.js"></script>
 </body>
