--- a/src/stakany.html
+++ b/src/stakany.html
@@ -5,27 +5,47 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="description" content="Золоті стакани компанії Bianchi Professional впізнавані споживачем у багатьох містах України 
+    | Стакани виробляються з міцного якісного картону із застосуванням зовнішньої ламінації |
+   В асортименті представлені різні об'єми.">
+    <meta name="keywords" content="bianchi, кава, стакани для кави, стакани для чаю" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <title>Стакани для кави і чаю | Стакани для вендінга і ХоРеКа</title>
-
+    <title>Стакани для кави і чаю | Стакани для вендінга та ХоРеКа</title>
     <link rel="icon" href="./favicon.png" type="image/x-icon">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link
         href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@300;400;500&family=Roboto:wght@300;400;500&display=swap"
         rel="stylesheet">
-
+    <!-- Facebook Pixel Code -->
+    <script>
+        !function (f, b, e, v, n, t, s) {
+            if (f.fbq) return; n = f.fbq = function () {
+                n.callMethod ?
+                    n.callMethod.apply(n, arguments) : n.queue.push(arguments)
+            };
+            if (!f._fbq) f._fbq = n; n.push = n; n.loaded = !0; n.version = '2.0';
+            n.queue = []; t = b.createElement(e); t.async = !0;
+            t.src = v; s = b.getElementsByTagName(e)[0];
+            s.parentNode.insertBefore(t, s)
+        }(window, document, 'script',
+            'https://connect.facebook.net/en_US/fbevents.js');
+        fbq('init', '3311079555831977');
+        fbq('track', 'PageView');
+    </script>
+    <noscript>
+        <img height="1" width="1" src="https://www.facebook.com/tr?id=3311079555831977&ev=PageView
+    &noscript=1" />
+    </noscript>
+    <!-- End Facebook Pixel Code -->
 </head>
 
 <body>
-
     <!-- /////////////////////////////////////////   Header    //////////////////////////////////////// -->
-
     <header class="header">
         <div class="header__up">
             <div class="header__wrapper container text-center">
                 <div class="row">
-
                     <div class="header__item col">
                         <ul>
                             <li class="telephone text-nowrap">
@@ -34,10 +54,8 @@
                             <li class="telephone text-nowrap">
                                 <a class="telephone" href="tel:+380935475572">(093) 547-55-72</a>
                             </li>
-
                         </ul>
                     </div>
-
                     <div class="header__item col">
                         <ul>
                             <li class="telephone text-nowrap">КИЇВ</li>
@@ -46,17 +64,14 @@
                             </li>
                         </ul>
                     </div>
-
                     <div class="header__item col">
                         <ul>
                             <li class="telephone text-nowrap">БРОВАРИ, БОРИСПІЛЬ</li>
-
                             <li class="telephone text-nowrap">
                                 <a class="telephone" href="tel:+380989700921">(098) 970-09-21</a>
                             </li>
                         </ul>
                     </div>
-
                     <div class="header__item col">
                         <ul>
                             <li class="telephone text-nowrap">БІЛА ЦЕРКВА</li>
@@ -65,7 +80,6 @@
                             </li>
                         </ul>
                     </div>
-
                     <div class="header__item col">
                         <ul>
                             <li class="telephone">ЧЕРКАСИ</li>
@@ -74,7 +88,6 @@
                             </li>
                         </ul>
                     </div>
-
                     <div class="header__item col">
                         <ul>
                             <li class="telephone">ВЕНДІНГ</li>
@@ -83,24 +96,21 @@
                             </li>
                         </ul>
                     </div>
-
                     <div class="header__item col">
                         <button class="btn text-nowrap" data-bs-toggle="modal" data-bs-target="#Modal">Залишити
                             заявку</button>
                     </div>
-
                 </div>
             </div>
         </div>
     </header>
-
     <!-- /////////////////////////////////////////   sidepanel    ////////////////////////////////////////     -->
-
     <div class="sidepanel__wrapper d-none d-lg-block">
         <div class="sidepanel">
             <div class="sidepanel__text text-nowrap"><span>Соціальні мережі</span></div>
             <div class="sidepanel__divider"></div>
-            <a target="_blank" href="https://instagram.com/bianchiprofessional?utm_medium=copy_link" class="sidepanel__icon">
+            <a target="_blank" href="https://instagram.com/bianchiprofessional?utm_medium=copy_link"
+                class="sidepanel__icon">
                 <img src="./img/index/instagram_green.webp" alt="instagram">
             </a>
             <a target="_blank" href="https://facebook.com/bianchiprofessional" class="sidepanel__icon">
@@ -111,14 +121,14 @@
             </a>
         </div>
     </div>
-
-     <!-- /////////////////////////////////////////   navbar    ////////////////////////////////////////     -->
-
+    <!-- /////////////////////////////////////////   navbar    ////////////////////////////////////////     -->
     <nav class="navbar navbar-expand-lg bg-light" id="navbar">
         <div class="container">
             <div>
-                <img src="./img/logo_menu1.webp" id="logo1" alt="logo" width="52" height="48" class="d-inline-block align-text-top">
-                <img src="./img/logo_menu2.webp" alt="logo" width="142" height="48" class="d-inline-block align-text-top">
+                <img src="./img/logo_menu1.webp" id="logo1" alt="logo" width="52" height="48"
+                    class="d-inline-block align-text-top">
+                <img src="./img/logo_menu2.webp" alt="logo" width="142" height="48"
+                    class="d-inline-block align-text-top">
             </div>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
                 aria-controls="navbarNav" aria-expanded="false" aria-label="Переключатель навигации">
@@ -129,7 +139,6 @@
                     <li class="nav-item">
                         <a class="btn text-nowrap" role="button" href="./index.html">ПРО НАС</a>
                     </li>
-
                     <li class="nav-item">
                         <ul class="btn-group">
                             <li class="nav-item">
@@ -150,7 +159,6 @@
                             </li>
                         </ul>
                     </li>
-
                     <li class="nav-item">
                         <ul class="btn-group">
                             <li class="nav-item">
@@ -171,7 +179,6 @@
                             </li>
                         </ul>
                     </li>
-
                     <li class="nav-item">
                         <ul class="btn-group">
                             <li class="nav-item">
@@ -190,7 +197,6 @@
                             </li>
                         </ul>
                     </li>
-
                     <li class="nav-item">
                         <a class="btn text-nowrap" role="button" href="./contacty.html">КОНТАКТИ</a>
                     </li>
@@ -198,16 +204,11 @@
             </div>
         </div>
     </nav>
-
     <div class="separator">
         <h3>Стакани, цукор</h3>
     </div>
-
-
     <!-- /////////////////////////////////////////   Goods    ////////////////////////////////////////     -->
-
     <div class="container hr-line"></div>
-
     <div class="container cards">
         <div class="row">
             <div class="col mb-1">
@@ -224,19 +225,18 @@
                             </ul>
                         </figcaption>
                     </figure>
-
                     <div class="card-body">
                         <h3 class="text-center">Картонні стакани</h3>
                         <small>
-                            <p class="lh-sm">Золоті стакани компанії Bianchi Professional впізнавані споживачем у багатьох містах України.</p>
-                            <p class="lh-sm">Стакани виробляються з міцного якісного картону із застосуванням зовнішньої ламінації.</p>
+                            <p class="lh-sm">Золоті стакани компанії Bianchi Professional впізнавані споживачем у
+                                багатьох містах України.</p>
+                            <p class="lh-sm">Стакани виробляються з міцного якісного картону із застосуванням зовнішньої
+                                ламінації.</p>
                             <p class="lh-sm">В асортименті представлені різні об'єми.</p>
                         </small>
-
                     </div>
                 </div>
             </div>
-
             <div class="col mb-1">
                 <div class="card hover-text-one">
                     <figure class="effect-text-three">
@@ -245,13 +245,12 @@
                             <ul class="lh-sm">
                                 <li><b>Розмір стіка:<br></b>66х50 мм</li>
                                 <br>
-                                <li><b>Вага:<br></b>3 г</li>
+                                <li><b>Вага:<br></b>4 г</li>
                                 <br>
                                 <li><b>Допустиме <br> відхилення: <br> маси нетто:<br></b>мінус 9%</li>
                             </ul>
                         </figcaption>
                     </figure>
-
                     <div class="card-body">
                         <h3 class="text-center">Цукор білий <br> порційний в стіках</h3>
                     </div>
@@ -259,11 +258,7 @@
             </div>
         </div>
     </div>
-
-    
-
     <!-- /////////////////////////////////////////   Footer    ////////////////////////////////////////     -->
-
     <footer class="footer">
         <div class="footer-items">
             <div class="container">
@@ -314,7 +309,7 @@
                             <p>
                                 Встановлення вендінгового обладнання по містах:
                                 Харків, Київ, Полтава, Дніпро, Запоріжжя, Рівне, Львів,
-                                Івано-Франківськ, Чернівці, Вінниця, Житомир, Одеса, 
+                                Івано-Франківськ, Чернівці, Вінниця, Житомир, Одеса,
                                 Кривий Ріг, Чернігів, Калуш, Коломия, Стрий.
                             </p>
                         </div>
@@ -334,9 +329,7 @@
             <h6><small>© 2016-2022 Bianchi professional</small></h6>
         </div>
     </footer>
-
     <!-- /////////////////////////////////////modal///////////////////////////// -->
-
     <div class="modal fade" id="Modal" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
         <div class="modal-dialog">
             <div class="modal-content">
@@ -368,18 +361,14 @@
                                 placeholder="Ваше місто..." required>
                         </div>
                     </div>
-
                     <div class="modal-footer">
-
                         <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Закрити</button>
                         <button name="sendRequestModal" class="btn send-request-modal">Відправити</button>
                     </div>
                 </form>
-
             </div>
         </div>
     </div>
-
     <script src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.1/dist/js/bootstrap.bundle.min.js"></script>
 </body>
