--- a/src/avtomaty.html
+++ b/src/avtomaty.html
@@ -8,7 +8,7 @@
     <meta name="description"
         content="✔Кавомашина Франке в оренду в Харкові, Київі ✔Сучасні кавоварки Автомат та Суперавтомат для вашого бізнесу">
     <meta name="keywords"
-        content="хорека, обладнання, кава,  кавове обладнання,  кавомашина в магазин, кавомашина в оренду, професійне кавове обладнання" />
+        content="хорека, обладнання, кава,  кавове обладнання,  кавомашина в магазин, кавомашина в оренду, професійне кавове обладнання">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <title>Кавомашина FRANKE | Суперавтомат | Автомат | Франке</title>
     <link rel="icon" href="./favicon.png" type="image/x-icon">
@@ -34,8 +34,7 @@
         fbq('track', 'PageView');
     </script>
     <noscript>
-        <img height="1" width="1" src="https://www.facebook.com/tr?id=3311079555831977&ev=PageView
-    &noscript=1" />
+        <img height="1" width="1" src="https://www.facebook.com/tr?id=3311079555831977&ev=PageView&noscript=1" />
     </noscript>
     <!-- End Facebook Pixel Code -->
 </head>
@@ -248,11 +247,9 @@
                         <img src="./img/avtomaty/GaiaTouch.webp" class="card-img-top" alt="GaiaTouch">
                         <figcaption class="machine">
                             <ul class="lh-sm">
-                                <li><b>Габарити: <br> </b>Висота 635 мм <br>Ширина 310 мм <br>Глибина 475 мм</li>
-                                <br>
-                                <li><b>Потужність: <br> </b>1,8 кВт</li>
-                                <br>
-                                <li><b>Вага: <br> </b>27 кг</li>
+                                <li><b>Габарити:<br></b>Висота 635 мм <br>Ширина 310 мм <br>Глибина 475 мм</li><br>
+                                <li><b>Потужність: <br> </b>1,8 кВт</li><br>
+                                <li><b>Вага:<br></b>27 кг</li>
                             </ul>
                             <div class="timeline text-center mx-4">
                                 <button class="btn text-nowrap fw-bold" data-bs-toggle="modal"
