--- a/src/dlya_cafe_restoranov.html
+++ b/src/dlya_cafe_restoranov.html
@@ -8,7 +8,7 @@
     <meta name="description"
         content="✔Професійна кавомашина постова для кафе та ресторанів в аренду ✔Безкоштовна доставка та обслуговування ✔Навчання вашого персоналу">
     <meta name="keywords"
-        content="хорека, обладнання, кава,  кавове обладнання,  кавомашина в офіс, кавомашина в кафе, кавомашина в ресторан, професійне кавове обладнання" />
+        content="хорека, обладнання, кава,  кавове обладнання,  кавомашина в офіс, кавомашина в кафе, кавомашина в ресторан, професійне кавове обладнання">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <title>Оренда професійнї кавомашини | Біанчі Харків</title>
     <link rel="icon" href="./favicon.png" type="image/x-icon">
@@ -34,8 +34,7 @@
         fbq('track', 'PageView');
     </script>
     <noscript>
-        <img height="1" width="1" src="https://www.facebook.com/tr?id=3311079555831977&ev=PageView
-    &noscript=1" />
+        <img height="1" width="1" src="https://www.facebook.com/tr?id=3311079555831977&ev=PageView&noscript=1" />
     </noscript>
     <!-- End Facebook Pixel Code -->
 </head>
