--- a/src/dlya_magazinov_i_setey.html
+++ b/src/dlya_magazinov_i_setey.html
@@ -8,7 +8,7 @@
     <meta name="description"
         content="Безкоштовна оренда кавоварок Харків, Киів при купівлі кави | Для магазинів та торгівельних мереж">
     <meta name="keywords"
-        content="хорека, обладнання, кава,  кавове обладнання,  кавомашина в магазин, кавомашина в оренду, професійне кавове обладнання" />
+        content="хорека, обладнання, кава,  кавове обладнання,  кавомашина в магазин, кавомашина в оренду, професійне кавове обладнання">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <title>Оренда кавомашин Харків, Київ безкоштовно | Вендінг | Біанчі</title>
     <link rel="icon" href="./favicon.png" type="image/x-icon">
@@ -34,8 +34,7 @@
         fbq('track', 'PageView');
     </script>
     <noscript>
-        <img height="1" width="1" src="https://www.facebook.com/tr?id=3311079555831977&ev=PageView
-    &noscript=1" />
+        <img height="1" width="1" src="https://www.facebook.com/tr?id=3311079555831977&ev=PageView&noscript=1" />
     </noscript>
     <!-- End Facebook Pixel Code -->
 </head>
