--- a/src/index.html
+++ b/src/index.html
@@ -8,7 +8,7 @@
     <meta name="description" content="✔Професійне кавовое обладнанняв аренду
     ✔Більше 5000 клієнтів ✔Оригінальна рецептура напоїв✔16 років присутності на ринку">
     <meta name="keywords"
-        content="кава, кавомашина в оренду, оренда, оренда кавоварки, прокат, кавомашина в прокат, кавовий бізнес, кавоварка" />
+        content="кава, кавомашина в оренду, оренда, оренда кавоварки, прокат, кавомашина в прокат, кавовий бізнес, кавоварка">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <title>Кава для бізнесу | Про компанію | Оренда | Кава | Bianchi Professional</title>
     <link rel="icon" href="./favicon.png" type="image/x-icon">
@@ -34,8 +34,7 @@
         fbq('track', 'PageView');
     </script>
     <noscript>
-        <img height="1" width="1" src="https://www.facebook.com/tr?id=3311079555831977&ev=PageView
-    &noscript=1" />
+        <img height="1" width="1" src="https://www.facebook.com/tr?id=3311079555831977&ev=PageView&noscript=1" />
     </noscript>
     <!-- End Facebook Pixel Code -->
 </head>
