--- a/src/stakany.html
+++ b/src/stakany.html
@@ -8,7 +8,7 @@
     <meta name="description" content="Золоті стакани компанії Bianchi Professional впізнавані споживачем у багатьох містах України 
     | Стакани виробляються з міцного якісного картону із застосуванням зовнішньої ламінації |
    В асортименті представлені різні об'єми.">
-    <meta name="keywords" content="bianchi, кава, стакани для кави, стакани для чаю" />
+    <meta name="keywords" content="bianchi, кава, стакани для кави, стакани для чаю">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <title>Стакани для кави і чаю | Стакани для вендінга та ХоРеКа</title>
     <link rel="icon" href="./favicon.png" type="image/x-icon">
@@ -34,8 +34,7 @@
         fbq('track', 'PageView');
     </script>
     <noscript>
-        <img height="1" width="1" src="https://www.facebook.com/tr?id=3311079555831977&ev=PageView
-    &noscript=1" />
+        <img height="1" width="1" src="https://www.facebook.com/tr?id=3311079555831977&ev=PageView&noscript=1" />
     </noscript>
     <!-- End Facebook Pixel Code -->
 </head>
