--- a/src/chay.html
+++ b/src/chay.html
@@ -7,7 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description"
         content="✔Асортимент пропонованого чаю здатний задовольнити вимогливі смаки ваших клієнтів ✔У нашому асортименті представлений як пакетований чай, так і розсипний">
-    <meta name="keywords" content="bianchi, чай для хорека, чай, липтон" />
+    <meta name="keywords" content="bianchi, чай для хорека, чай, липтон">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <title>Чай для ХоРеКа</title>
     <link rel="icon" href="./favicon.png" type="image/x-icon">
@@ -33,8 +33,7 @@
         fbq('track', 'PageView');
     </script>
     <noscript>
-        <img height="1" width="1" src="https://www.facebook.com/tr?id=3311079555831977&ev=PageView
-    &noscript=1" />
+        <img height="1" width="1" src="https://www.facebook.com/tr?id=3311079555831977&ev=PageView&noscript=1" />
     </noscript>
     <!-- End Facebook Pixel Code -->
 </head>
