--- a/src/contacty.html
+++ b/src/contacty.html
@@ -8,7 +8,7 @@
     <meta name="description"
         content="Ви можете зв'язатися з нами по e-mail, телефону або через форму зворотнього зв'язку">
     <meta name="keywords"
-        content="кава, кавомашина в оренду, оренда, оренда кавоварки, прокат, кавомашина в прокат, кавовий бізнес, кавоварка" />
+        content="кава, кавомашина в оренду, оренда, оренда кавоварки, прокат, кавомашина в прокат, кавовий бізнес, кавоварка">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <title>Зв'язатися з нами | Bianchi Professional</title>
     <link rel="icon" href="./favicon.png" type="image/x-icon">
@@ -35,8 +35,7 @@
         fbq('track', 'PageView');
     </script>
     <noscript>
-        <img height="1" width="1" src="https://www.facebook.com/tr?id=3311079555831977&ev=PageView
-    &noscript=1" />
+        <img height="1" width="1" src="https://www.facebook.com/tr?id=3311079555831977&ev=PageView&noscript=1" />
     </noscript>
     <!-- End Facebook Pixel Code -->
 </head>
