--- a/src/kofemolki.html
+++ b/src/kofemolki.html
@@ -7,7 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description"
         content="Обладнання в оренду для кафе, барів, ресторанів Харків, Киів | Професійні кавомолки, що можна взяти в додаток до потстової кавомашини">
-    <meta name="keywords" content="хорека, кавомолка, обладнання, для кафе, для ресторанів, для бара" />
+    <meta name="keywords" content="хорека, кавомолка, обладнання, для кафе, для ресторанів, для бара">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <title>Оренда кавомолки Харків | Для кафе, ресторанів | Бианчи Проф</title>
     <link rel="icon" href="./favicon.png" type="image/x-icon">
@@ -33,8 +33,7 @@
         fbq('track', 'PageView');
     </script>
     <noscript>
-        <img height="1" width="1" src="https://www.facebook.com/tr?id=3311079555831977&ev=PageView
-    &noscript=1" />
+        <img height="1" width="1" src="https://www.facebook.com/tr?id=3311079555831977&ev=PageView&noscript=1" />
     </noscript>
     <!-- End Facebook Pixel Code -->
 </head>
