--- a/src/moloko_shokolad.html
+++ b/src/moloko_shokolad.html
@@ -8,7 +8,7 @@
     <meta name="description" content="✔Готові розчинні суміші можуть значно урізноманітнити меню кавомашини як в чистому вигляді, так і в міксі з кавою
     ✔Всі продукти вищої якості виробництва Голландії та Італії
     ✔Яскравий насичений смак, улюблений і впізнаваний багатьма клієнтами">
-    <meta name="keywords" content="bianchi, кава, капучино, молоко, ірландський віскі" />
+    <meta name="keywords" content="bianchi, кава, капучино, молоко, ірландський віскі">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <title>Шоколад | Капучино | Молоко | Ірландський Віскі</title>
     <link rel="icon" href="./favicon.png" type="image/x-icon">
@@ -34,8 +34,7 @@
         fbq('track', 'PageView');
     </script>
     <noscript>
-        <img height="1" width="1" src="https://www.facebook.com/tr?id=3311079555831977&ev=PageView
-    &noscript=1" />
+        <img height="1" width="1" src="https://www.facebook.com/tr?id=3311079555831977&ev=PageView&noscript=1" />
     </noscript>
     <!-- End Facebook Pixel Code -->
 </head>
