--- a/src/syropi.html
+++ b/src/syropi.html
@@ -7,7 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="✔Сиропи для кави —  це солодкі ароматні добавки, які покликані посилити, підкреслити або поліпшити смак напою, як гарячого, так і холодного.
     ✔У нашому асортименті представлені найпопулярніші смаки">
-    <meta name="keywords" content="bianchi, сиропи до кави, топінг до кави, сироп" />
+    <meta name="keywords" content="bianchi, сиропи до кави, топінг до кави, сироп">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <title>Сиропи до кави</title>
     <link rel="icon" href="./favicon.png" type="image/x-icon">
@@ -33,8 +33,7 @@
         fbq('track', 'PageView');
     </script>
     <noscript>
-        <img height="1" width="1" src="https://www.facebook.com/tr?id=3311079555831977&ev=PageView
-    &noscript=1" />
+        <img height="1" width="1" src="https://www.facebook.com/tr?id=3311079555831977&ev=PageView&noscript=1" />
     </noscript>
     <!-- End Facebook Pixel Code -->
 </head>
