--- a/src/vending_avtomaty.html
+++ b/src/vending_avtomaty.html
@@ -7,7 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description"
         content="✔Сучасне вендінгове обладнення ✔Кавові та снекові автомати ✔Оригінальна рецептура напоїв ✔Безкоштовна доставка та обслуговування">
-    <meta name="keywords" content="кава,  вендінг, кавовий автомат, снековий автомат" />
+    <meta name="keywords" content="кава,  вендінг, кавовий автомат, снековий автомат">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <title>Обладнання для вендінгу в Україні | Кавові та снекові автомати | Bianchi кава</title>
     <link rel="icon" href="./favicon.png" type="image/x-icon">
@@ -33,8 +33,7 @@
         fbq('track', 'PageView');
     </script>
     <noscript>
-        <img height="1" width="1" src="https://www.facebook.com/tr?id=3311079555831977&ev=PageView
-    &noscript=1" />
+        <img height="1" width="1" src="https://www.facebook.com/tr?id=3311079555831977&ev=PageView&noscript=1" />
     </noscript>
     <!-- End Facebook Pixel Code -->
 </head>
