--- a/src/chay.html
+++ b/src/chay.html
@@ -230,7 +230,7 @@
     <!-- /////////////////////////////////////////   Goods    ////////////////////////////////////////     -->
     <div class="container hr-line"></div>
     <div class="container cards">
-        <div class="row">
+        <!-- <div class="row">
             <div class="col col-auto col-sm-6 col-md-4 mb-1">
                 <div class="card hover-text-one">
                     <figure class="effect-text-three">
@@ -301,14 +301,14 @@
                     </div>
                 </div>
             </div>
-        </div>
+        </div> -->
     </div>
     <div class="container cards">
         <div class="row">
             <div class="col col-auto col-sm-6 col-md-3 mb-1">
                 <div class="card hover-text-one">
                     <figure class="effect-text-three">
-                        <img src="./img/chay/TottiEmeraldLeaf.webp" class="card-img-top combo" alt="Totti Emerald Leaf">
+                        <img src="./img/chay/assorti.png" class="card-img-top combo" alt="Totti Emerald Leaf">
                         <figcaption class="goods">
                             <ul class="lh-sm">
                                 <li><b>Склад:<br></b>чай зелений<br>байховий<br>китайський<br>крупнолис-<br>товий.</li>
@@ -318,16 +318,16 @@
                         </figcaption>
                     </figure>
                     <div class="card-body">
-                        <h3 class="text-center">Чай Totti "Emerald Leaf" зелений</h3>
+                        <h3 class="text-center">Чай Bianchi в асортименті та картонний фірмовий стакан</h3>
                         <small>
-                            <p class="lh-sm">Добірний зелений чай з надзвичайно ніжним смаком і тонким квітковим
-                                ароматом. Смарагдове листя цього вишуканого чаю - справжнє багатство з чайної скарбниці
-                                Китаю.</p>
+                            <p class="lh-sm">Чай у пакетиках в індивідуальному конвертику. <br>
+                                Повний об’єм стакану: 250мл <br>
+                                Колекція смаків задовольнить будь якого вибагливого поцінувача чаю!</p>
                         </small>
                     </div>
                 </div>
             </div>
-            <div class="col col-auto col-sm-6 col-md-3 mb-1">
+            <!-- <div class="col col-auto col-sm-6 col-md-3 mb-1">
                 <div class="card hover-text-one">
                     <figure class="effect-text-three">
                         <img src="./img/chay/TottiFruit.webp" class="card-img-top combo" alt="Totti Fruit">
@@ -377,13 +377,6 @@
                 <div class="card">
                     <figure>
                         <img src="./img/chay/pack.webp" class="card-img-top" alt="Filter Packet">
-                        <!-- <figcaption class="goods">
-                            <ul class="lh-sm">
-                                <li><b>Фасовка:<br></b>25 пакетиків.</li>
-                                <br>
-                                <li><b>Маса нетто:<br></b>45 гр.</li>
-                            </ul>
-                        </figcaption> -->
                     </figure>
                     <div class="card-body">
                         <h3 class="text-center">Фільтр-пакети для заварювання чаю</h3>
@@ -393,7 +386,7 @@
                         </small>
                     </div>
                 </div>
-            </div>
+            </div> -->
         </div>
     </div>
     <!-- /////////////////////////////////////////   Footer    ////////////////////////////////////////     -->
