--- a/src/chay.html
+++ b/src/chay.html
@@ -307,7 +307,7 @@
             <div class="col col-auto col-sm-6 col-md-3 mb-1">
                 <div class="card hover-text-one">
                     <figure class="effect-text-three">
-                        <img src="./img/chay/assorti.png" class="card-img-top combo" alt="Totti Emerald Leaf">
+                        <img src="./img/chay/assorti.webp" class="card-img-top combo" alt="Totti Emerald Leaf">
                         <figcaption class="goods">
                             <ul class="lh-sm">
                                 <li><b>Склад:<br></b>чай зелений<br>байховий<br>китайський<br>крупнолис-<br>товий.</li>
